--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ title                    : "Guía de DSi"
 title_separator          : "-"
 name                     : "Lord Friky"
 description              : "Una guía completa de hacking para Nintendo DSi, desde stock hasta DSiMenu++"
-url                      : https://lordfriky.github.io/guia_dsi/
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url                      : https://lordfriky.github.io
+baseurl                  : /guia_dsi
+repository               : https://github.com/lordfriky/guia_dsi
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
