--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /más/dumpeando-dsiware
   - title: "Instalando DSiWare"
     url: /más/instalando-dsiware
-  - title: "Reemplazando el menú del sistema con DSiMenu++"
+  - title: "Reemplazando el menú del sistema con TWiLight Menu++"
     url: /guía/reemplazando-menu-del-sistema/
   - title: "Instalando TWiLight Menu++ en 3DS"
     url: /anexo/instalando-twilight-menu++-3ds
@@ -23,7 +23,7 @@ side:
         url: /guía/instalando-unlaunch-(hardmod)/
       - title: "Instalando HiyaCFW"
         url: /guía/instalando-hiyacfw/
-      - title: "Reemplazando el menú del sistema con DSiMenu++"
+      - title: "Reemplazando el menú del sistema con TWiLight Menu++"
         url: /guía/reemplazando-menu-del-sistema/
       - title: "Finalizar Instalación"
         url: /guía/finalizar-instalación/
